Page MenuHome GnuPG

GnuPG 2.3 regression: keydb_search failed: Invalid argument
Closed, ResolvedPublic

Description

When using card/token to decrypt something, GnuPG 2.3 fails if the user still keeps using ~/.gnupg/pubring.gpg.

This is because decryption mechanism is enhanced to check available keys on card/token which does key search by keygrip, but keygrip search is not supported by keyring.

Related Objects